--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-xxl">
             <a href="#intro" class="navbar-brand">
                 <span class="fw-bold text-secondary">
-                    <i class="bi bi-code-square"></i>
+                    <i class="bi bi-code-square me-1"></i>
                     Claire Ingram
                 </span>
             </a>
@@ -40,10 +40,10 @@
                         <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -56,29 +56,29 @@
 
     <!-- hero -->
     <section id="intro">
-        <div class="containter-lg">
+        <div class="containter-lg my-4">
             <div class="row justify-content-center align-items-center">
                 <!-- align-items-center puts items verically in center of container -->
                 <div class="col-md-5 text-center text-md-start">
                     <!-- text smaller screens center, larger goes left -->
                     <h1>
-                        <div class="display-2">Title</div>
-                        <div class="display-5 text-muted">Subtitle</div>
+                        <div class="display-2">Hi there!</div>
+                        <div class="display-5 text-muted">I'm Claire</div>
                     </h1>
-                    <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#pricing" class="btn btn-secondary btn-lg">button text</a>
+                    <p class="lead my-4 text-muted">Take a minute to have a look at my portfolio</p>
+                    <a href="#work" class="btn btn-lg" style="background-color: #ff8059">My portfolio</a>
                 </div>
 
                 <div class="col-md-5 text-center d-none d-md-block">
                     <!-- d-none d-md-block removes image on smaller screens and displays as block when on medium+ screens -->
-                    <img class="img-fluid" src="https://placehold.co/400" alt="">
+                    <img class="img-fluid" src="./assets/images/claire-ingram-icon-bear-no-border.png" alt="Bear icon">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- work -->
-    <section id="work" class="bg-light mt-5">
+    <section id="work" class="bg-color-peach">
         <div class="container-lg">
             <div class="text-center">
                 <h2>Work</h2>
@@ -92,10 +92,10 @@
                 <!-- card one -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
-                        <img src="https://placehold.co/100" class="card-img-top" alt="...">
+                        <img src="./assets/images/work-one.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center py-4">
-                            <h4 class="card-title">Work one</h4>
-                            <p class="card-text mx-5 text-muted">Lorem ipsum dolor.</p>                           
+                            <h4 class="card-title">Horiseon</h4>
+                            <p class="card-text mx-5 text-muted">Improving accessibility</p>
                         </div>
                     </div>
                 </div>
@@ -103,10 +103,10 @@
                 <!-- card two -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
-                        <img src="https://placehold.co/100" class="card-img-top" alt="...">
+                        <img src="./assets/images/work-two.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center py-4">
-                            <h4 class="card-title">Work two</h4>
-                            <p class="card-text mx-5 text-muted">Lorem ipsum dolor.</p>
+                            <h4 class="card-title">Portfolio</h4>
+                            <p class="card-text mx-5 text-muted">Creating a portfolio</p>
                         </div>
                     </div>
                 </div>
@@ -126,45 +126,101 @@
 
         </div>
     </section>
+    
+    <!-- about -->
+    <section id="about">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2>About Me</h2>
+                <p class="lead text-muted mt-4">
+                    Hey there! I'm Claire and I'm currently a Web Content Manager for a company based in London. I've
+                    worked there for almost 4 years and I'm responsible for all digital projects, including our company
+                    website and social media accounts.
+                </p>
+                <p class="lead text-muted mt-4">
+                    I'm learning to be a Web Developer in my spare time because I've always been interested in coding
+                    and Web Development will help me improve in my current role.
+                </p>
+                <p class="lead text-muted mt-4">
+                    In my downtime I like to paint digitally, play computer games (particularly pixel art games) and
+                    look after my two cats, Rickert and Casca. 10 points if you can tell me what they're named after!
+                </p>
+            </div>
+        </div>
+    </section>
 
     <!-- skills -->
-    <section id="skills">
+    <section id="skills" class="bg-color-peach">
         <div class="container-lg">
             <div class="text-center">
                 <h2>Skills</h2>
-                <p class="lead text-muted">Current skill set</p>
+                <p class="lead text-muted">My current skill set</p>
             </div>
 
             <!-- cards -->
-            <div class="row my-5 align-items-center justify-content-center g-5">
+            <div class="row my-1 align-items-center justify-content-center g-5">
                 <!-- g-0 is no gap between cards, g-5 is a big gap -->
 
                 <!-- card one -->
                 <div class="col-8 col-lg-4 col-xl-3">
-                    <div class="card border-0 bg-light">
-                        <div class="card-body text-center py-4">
-                            <h4 class="card-title">Photoshop</h4>
-                            <p class="lead card-subtitle">Intermediate</p>                            
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                            <h4 class="card-title">HTML & CSS</h4>
+                            <p class="lead card-subtitle">Beginner</p>
                         </div>
                     </div>
                 </div>
 
                 <!-- card two -->
                 <div class="col-8 col-lg-4 col-xl-3">
-                    <div class="card border-0 bg-light">
-                        <div class="card-body text-center py-4">
-                            <h4 class="card-title">HTML & CSS</h4>
-                            <p class="lead card-subtitle">Beginner</p>                            
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                            <h4 class="card-title">JavaScript</h4>
+                            <p class="lead card-subtitle">Coming soon!</p>
                         </div>
                     </div>
                 </div>
 
                 <!-- card three -->
                 <div class="col-8 col-lg-4 col-xl-3">
-                    <div class="card border-0 bg-light">
-                        <div class="card-body text-center py-4">
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Bootstrap</h4>
+                            <p class="lead card-subtitle">Beginner</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row my-1 align-items-center justify-content-center g-5 pb-5">
+
+                <!-- card four -->
+                <div class="col-8 col-lg-4 col-xl-3">
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Photoshop</h4>
+                            <p class="lead card-subtitle">Intermediate</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card five -->
+                <div class="col-8 col-lg-4 col-xl-3">
+                    <div class="card border-0">
+                        <div class="card-body text-center">
                             <h4 class="card-title">Piano</h4>
-                            <p class="lead card-subtitle">Beginner</p>                            
+                            <p class="lead card-subtitle">Beginner</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card six -->
+                <div class="col-8 col-lg-4 col-xl-3">
+                    <div class="card border-0">
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Master Googler</h4>
+                            <p class="lead card-subtitle">One day...</p>
                         </div>
                     </div>
                 </div>
@@ -174,29 +230,55 @@
         </div>
     </section>
 
-    <!-- about -->
-    <section id="about" class="bg-light">
+    <!-- contact -->
+    <section id="contact">
         <div class="container-lg">
             <div class="text-center">
-                <h2>About Me</h2>
-                <p class="lead text-muted mt-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus rem aliquid reiciendis, voluptatum modi voluptatem expedita quisquam temporibus incidunt at debitis dicta? Commodi, unde cumque. Commodi, eaque ab! Nisi ullam, asperiores quidem magnam eligendi quo blanditiis officia inventore commodi ratione et nam at animi iste sint excepturi natus dolor maxime.</p>
+                <h2>Get in Touch</h2>
+                <p class="lead">Questions to ask? Fill out the form below to contact me directly...</p>
+            </div>
+
+            <div class="row justify-content-center my-5">
+                <div class="col-lg-6">
+                    <form>
+                        <!-- name -->
+                        <label for="name" class="form-label">Name</label>
+                        <div class="mb-4 input-group">
+                            <span class="input-group-text">
+                                <i class="bi bi-person-fill"></i>
+                            </span>
+                            <input type="text" class="form-control" id="name" placeholder="e.g. Claire">
+                        </div>
+
+                        <!-- email address -->
+                        <label for="email" class="form-label">Email address:</label>
+                        <div class="mb-4 input-group">
+                            <span class="input-group-text">
+                                <i class="bi bi-envelope-fill"></i>
+                            </span>
+                            <input type="email" class="form-control" id="email" placeholder="e.g. claire@example.com">
+                        </div>
+
+                        <!-- question -->
+                        <label for="query" class="form-label" id="query">What is your question about?</label>
+                        <textarea id="query" class="form-control" style="height: 140px"></textarea>
+
+                        <div class="my-4 text-center">
+                            <button type="submit" class="btn btn-secondary">Submit</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- contact
-    <section id="contact">
-        <div class="container-lg">
-
-        </div>
-    </section> -->
-
     <!-- footer -->
     <footer>
-        <div class="d-grid gap-5 d-md-flex justify-content-center p-3">
-            <button type="button" class="btn btn-outline-primary">Twitter</button>
-            <button type="button" class="btn btn-outline-primary">Instagram</button>
-            <button type="button" class="btn btn-outline-primary">GitHub</button>
+        <div class="d-grid gap-5 d-md-flex justify-content-center pb-5 overflow-auto">
+            <a href="http://www.twitter.com/" alt="twitter icon"><i class="bi bi-twitter"></i></a>
+            <a href="http://www.facebook.com/" alt="facebook icon"><i class="bi bi-facebook"></i></a>
+            <a href="http://www.instagram.com/" alt="instagram icon"><i class="bi bi-instagram"></i></a>
+            <a href="http://www.github.com/" alt="github icon"><i class="bi bi-github"></i></a>
         </div>
     </footer>
 
