--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <!-- card one -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
-                        <img src="./assets/images/work-one.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/work-one.jpg" class="card-img-top" alt="Image of Horiseon website">
                         <div class="card-body text-center py-4">
                             <h4 class="card-title">Horiseon</h4>
                             <p class="card-text mx-5 text-muted">Improving accessibility</p>
@@ -103,7 +103,7 @@
                 <!-- card two -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
-                        <img src="./assets/images/work-two.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/work-two.jpg" class="card-img-top" alt="Image of portfolio website">
                         <div class="card-body text-center py-4">
                             <h4 class="card-title">Portfolio</h4>
                             <p class="card-text mx-5 text-muted">Creating a portfolio</p>
@@ -114,10 +114,10 @@
                 <!-- card three -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
-                        <img src="https://placehold.co/100" class="card-img-top" alt="...">
+                        <img src="./assets/images/work-three.jpg" class="card-img-top" alt="Image of bootstrap portfolio website">
                         <div class="card-body text-center py-4">
-                            <h4 class="card-title">Work three</h4>
-                            <p class="card-text mx-5 text-muted">Lorem ipsum dolor.</p>
+                            <h4 class="card-title">Portfolio 2.0</h4>
+                            <p class="card-text mx-5 text-muted">Bootstrap portfolio</p>
                         </div>
                     </div>
                 </div>
@@ -126,11 +126,11 @@
 
         </div>
     </section>
-    
+
     <!-- about -->
     <section id="about">
         <div class="container-lg">
-            <div class="text-center">
+            <div class="col-md-8 text-center justify-content-center align-items-center mx-auto">
                 <h2>About Me</h2>
                 <p class="lead text-muted mt-4">
                     Hey there! I'm Claire and I'm currently a Web Content Manager for a company based in London. I've
@@ -269,18 +269,45 @@
                     </form>
                 </div>
             </div>
+
+            <!-- social media links -->
+
+            <div class="row align-items-center justify-content-center text-center">
+                <div class="col-1">
+                    <a href="http://www.twitter.com/" alt="twitter icon" style="color: black;"><i class="bi bi-twitter"></i></a>
+                </div>
+                <div class="col-1">
+                    <a href="http://www.facebook.com/" alt="facebook icon" style="color: black;"><i class="bi bi-facebook"></i></a>
+                </div>
+                <div class="col-1">
+                    <a href="http://www.instagram.com/" alt="instagram icon" style="color: black;"><i class="bi bi-instagram"></i></a>
+                </div>
+                <div class="col-1">
+                    <a href="http://www.github.com/" alt="github icon" style="color: black;"><i class="bi bi-github"></i></a>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- footer -->
     <footer>
+        <div class="container-lg">
+            <div class="text-center">
+                <p>
+                    Claire Ingram 2023
+                </p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- <footer>
         <div class="d-grid gap-5 d-md-flex justify-content-center pb-5 overflow-auto">
             <a href="http://www.twitter.com/" alt="twitter icon"><i class="bi bi-twitter"></i></a>
             <a href="http://www.facebook.com/" alt="facebook icon"><i class="bi bi-facebook"></i></a>
             <a href="http://www.instagram.com/" alt="instagram icon"><i class="bi bi-instagram"></i></a>
             <a href="http://www.github.com/" alt="github icon"><i class="bi bi-github"></i></a>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- bootstrap javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
