--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             <!-- nav bar links -->
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item px-2">
                         <a class="nav-link" href="#work">Work</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item px-2">
                         <a class="nav-link" href="#about">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item px-2">
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item px-2">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -91,34 +91,43 @@
 
                 <!-- card one -->
                 <div class="col-8 col-lg-4 col-xl-3">
-                    <div class="card border-0">
-                        <img src="./assets/images/work-one.jpg" class="card-img-top" alt="Image of Horiseon website">
-                        <div class="card-body text-center py-4">
-                            <h4 class="card-title">Horiseon</h4>
-                            <p class="card-text mx-5 text-muted">Improving accessibility</p>
-                        </div>
+                    <div class="card border-0 card-shadow">
+                        <a href="#work" style="text-decoration: none; color: black;">
+                            <img src="./assets/images/work-one.jpg" class="card-img-top"
+                                alt="Image of Horiseon website">
+                            <div class="card-body text-center py-4">
+                                <h4 class="card-title">Horiseon</h4>
+                                <p class="card-text mx-5 text-muted">Improving accessibility</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
                 <!-- card two -->
                 <div class="col-8 col-lg-4 col-xl-3">
-                    <div class="card border-0">
-                        <img src="./assets/images/work-two.jpg" class="card-img-top" alt="Image of portfolio website">
-                        <div class="card-body text-center py-4">
-                            <h4 class="card-title">Portfolio</h4>
-                            <p class="card-text mx-5 text-muted">Creating a portfolio</p>
-                        </div>
+                    <div class="card border-0 card-shadow">
+                        <a href="#work" style="text-decoration: none; color: black;">
+                            <img src="./assets/images/work-two.jpg" class="card-img-top"
+                                alt="Image of portfolio website">
+                            <div class="card-body text-center py-4">
+                                <h4 class="card-title">Portfolio</h4>
+                                <p class="card-text mx-5 text-muted">Creating a portfolio</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
                 <!-- card three -->
                 <div class="col-8 col-lg-4 col-xl-3">
-                    <div class="card border-0">
-                        <img src="./assets/images/work-three.jpg" class="card-img-top" alt="Image of bootstrap portfolio website">
-                        <div class="card-body text-center py-4">
-                            <h4 class="card-title">Portfolio 2.0</h4>
-                            <p class="card-text mx-5 text-muted">Bootstrap portfolio</p>
-                        </div>
+                    <div class="card border-0 card-shadow">
+                        <a href="#work" style="text-decoration: none; color: black;">
+                            <img src="./assets/images/work-three.jpg" class="card-img-top"
+                                alt="Image of bootstrap portfolio website">
+                            <div class="card-body text-center py-4">
+                                <h4 class="card-title">Portfolio 2.0</h4>
+                                <p class="card-text mx-5 text-muted">Bootstrap portfolio</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
@@ -133,9 +142,11 @@
             <div class="col-md-8 text-center justify-content-center align-items-center mx-auto">
                 <h2>About Me</h2>
                 <p class="lead text-muted mt-4">
-                    Hey there! I'm Claire and I'm currently a Web Content Manager for a company based in London. I've
-                    worked there for almost 4 years and I'm responsible for all digital projects, including our company
-                    website and social media accounts.
+                    Hey there! I'm Claire and I'm currently a Web Content Manager for a company based in London.
+                </p>
+                <p class="lead text-muted mt-4">
+                    I've worked at my current company for almost 4 years and I'm responsible for all digital projects,
+                    including their customer facing website and social media accounts.
                 </p>
                 <p class="lead text-muted mt-4">
                     I'm learning to be a Web Developer in my spare time because I've always been interested in coding
@@ -175,8 +186,8 @@
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
                         <div class="card-body text-center">
-                            <h4 class="card-title">JavaScript</h4>
-                            <p class="lead card-subtitle">Coming soon!</p>
+                            <h4 class="card-title">Bootstrap</h4>
+                            <p class="lead card-subtitle">Beginner</p>
                         </div>
                     </div>
                 </div>
@@ -185,8 +196,8 @@
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Bootstrap</h4>
-                            <p class="lead card-subtitle">Beginner</p>
+                            <h4 class="card-title">JavaScript</h4>
+                            <p class="lead card-subtitle">Coming soon!</p>
                         </div>
                     </div>
                 </div>
@@ -199,8 +210,8 @@
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Photoshop</h4>
-                            <p class="lead card-subtitle">Intermediate</p>
+                            <h4 class="card-title">UX</h4>
+                            <p class="lead card-subtitle">Beginner</p>
                         </div>
                     </div>
                 </div>
@@ -209,7 +220,7 @@
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Piano</h4>
+                            <h4 class="card-title">Git</h4>
                             <p class="lead card-subtitle">Beginner</p>
                         </div>
                     </div>
@@ -235,14 +246,14 @@
         <div class="container-lg">
             <div class="text-center">
                 <h2>Get in Touch</h2>
-                <p class="lead">Questions to ask? Fill out the form below to contact me directly...</p>
+                <p class="lead">Have a question? Fill out the form below...</p>
             </div>
 
             <div class="row justify-content-center my-5">
                 <div class="col-lg-6">
                     <form>
                         <!-- name -->
-                        <label for="name" class="form-label">Name</label>
+                        <label for="name" class="form-label">Name:</label>
                         <div class="mb-4 input-group">
                             <span class="input-group-text">
                                 <i class="bi bi-person-fill"></i>
@@ -263,8 +274,9 @@
                         <label for="query" class="form-label" id="query">What is your question about?</label>
                         <textarea id="query" class="form-control" style="height: 140px"></textarea>
 
-                        <div class="my-4 text-center">
-                            <button type="submit" class="btn btn-secondary">Submit</button>
+                        <div class="my-4 text-center border-0">
+                            <button type="submit" class="btn btn-light"
+                                style="background-color: #ff8059">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -274,16 +286,20 @@
 
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-1">
-                    <a href="http://www.twitter.com/" alt="twitter icon" style="color: black;"><i class="bi bi-twitter"></i></a>
+                    <a href="http://www.twitter.com/" alt="twitter icon" style="color: black;"><i
+                            class="bi bi-twitter"></i></a>
                 </div>
                 <div class="col-1">
-                    <a href="http://www.facebook.com/" alt="facebook icon" style="color: black;"><i class="bi bi-facebook"></i></a>
+                    <a href="http://www.facebook.com/" alt="facebook icon" style="color: black;"><i
+                            class="bi bi-facebook"></i></a>
                 </div>
                 <div class="col-1">
-                    <a href="http://www.instagram.com/" alt="instagram icon" style="color: black;"><i class="bi bi-instagram"></i></a>
+                    <a href="http://www.instagram.com/" alt="instagram icon" style="color: black;"><i
+                            class="bi bi-instagram"></i></a>
                 </div>
                 <div class="col-1">
-                    <a href="http://www.github.com/" alt="github icon" style="color: black;"><i class="bi bi-github"></i></a>
+                    <a href="http://www.github.com/" alt="github icon" style="color: black;"><i
+                            class="bi bi-github"></i></a>
                 </div>
             </div>
         </div>
