fixed margin and padding issue on cards when viewing on a mobile device

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="work" class="bg-color-peach">
         <div class="container-lg">
             <div class="text-center">
-                <h2>Work</h2>
+                <h2 class="mt-4">Work</h2>
                 <p class="lead text-muted">A selection of finished projects</p>
             </div>
 
@@ -140,7 +140,7 @@
     <section id="about">
         <div class="container-lg">
             <div class="col-md-8 text-center justify-content-center align-items-center mx-auto">
-                <h2>About Me</h2>
+                <h2 class="mt-4">About Me</h2>
                 <p class="lead text-muted mt-4">
                     Hey there! I'm Claire and I'm currently a Web Content Manager for a company based in London.
                 </p>
@@ -152,7 +152,7 @@
                     I'm learning to be a Web Developer in my spare time because I've always been interested in coding
                     and Web Development will help me improve in my current role.
                 </p>
-                <p class="lead text-muted mt-4">
+                <p class="lead text-muted my-4">
                     In my downtime I like to paint digitally, play computer games (particularly pixel art games) and
                     look after my two cats, Rickert and Casca. 10 points if you can tell me what they're named after!
                 </p>
@@ -164,7 +164,7 @@
     <section id="skills" class="bg-color-peach">
         <div class="container-lg">
             <div class="text-center">
-                <h2>Skills</h2>
+                <h2 class="mt-4">Skills</h2>
                 <p class="lead text-muted">My current skill set</p>
             </div>
 
@@ -245,7 +245,7 @@
     <section id="contact">
         <div class="container-lg">
             <div class="text-center">
-                <h2>Get in Touch</h2>
+                <h2 class="mt-4">Get in Touch</h2>
                 <p class="lead">Have a question? Fill out the form below...</p>
             </div>
 
