fixed issue with display on smaller mobiles causing cards text to overflow

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- hero -->
     <section id="intro">
-        <div class="containter-lg my-4">
+        <div class="containter-lg my-4 py-5 px-4">
             <div class="row justify-content-center align-items-center">
                 <!-- align-items-center puts items verically in center of container -->
                 <div class="col-md-5 text-center text-md-start">
@@ -79,7 +79,7 @@
 
     <!-- work -->
     <section id="work" class="bg-color-peach">
-        <div class="container-lg">
+        <div class="container-lg py-5">
             <div class="text-center">
                 <h2 class="mt-4">Work</h2>
                 <p class="lead text-muted">A selection of finished projects</p>
@@ -138,7 +138,7 @@
 
     <!-- about -->
     <section id="about">
-        <div class="container-lg">
+        <div class="container-lg py-5 px-3">
             <div class="col-md-8 text-center justify-content-center align-items-center mx-auto">
                 <h2 class="mt-4">About Me</h2>
                 <p class="lead text-muted mt-4">
@@ -162,7 +162,7 @@
 
     <!-- skills -->
     <section id="skills" class="bg-color-peach">
-        <div class="container-lg">
+        <div class="container-lg py-5">
             <div class="text-center">
                 <h2 class="mt-4">Skills</h2>
                 <p class="lead text-muted">My current skill set</p>
@@ -243,7 +243,7 @@
 
     <!-- contact -->
     <section id="contact">
-        <div class="container-lg">
+        <div class="container-lg py-5">
             <div class="text-center">
                 <h2 class="mt-4">Get in Touch</h2>
                 <p class="lead">Have a question? Fill out the form below...</p>
@@ -307,7 +307,7 @@
 
     <!-- footer -->
     <footer>
-        <div class="container-lg">
+        <div class="container-lg py-2">
             <div class="text-center">
                 <p>
                     Claire Ingram 2023
