--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <!-- card one -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0 card-shadow">
-                        <a href="#work" style="text-decoration: none; color: black;">
+                        <a href="https://ing3rs.github.io/challenge-1-horiseon-accessibility/" style="text-decoration: none; color: black;">
                             <img src="./assets/images/work-one.jpg" class="card-img-top"
                                 alt="Image of Horiseon website">
                             <div class="card-body text-center py-4">
@@ -106,7 +106,7 @@
                 <!-- card two -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0 card-shadow">
-                        <a href="#work" style="text-decoration: none; color: black;">
+                        <a href="https://ing3rs.github.io/challenge-2-portfolio/" style="text-decoration: none; color: black;">
                             <img src="./assets/images/work-two.jpg" class="card-img-top"
                                 alt="Image of portfolio website">
                             <div class="card-body text-center py-4">
@@ -120,7 +120,7 @@
                 <!-- card three -->
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0 card-shadow">
-                        <a href="#work" style="text-decoration: none; color: black;">
+                        <a href="https://ing3rs.github.io/challenge-3-boostrap-portfolio/" style="text-decoration: none; color: black;">
                             <img src="./assets/images/work-three.jpg" class="card-img-top"
                                 alt="Image of bootstrap portfolio website">
                             <div class="card-body text-center py-4">
